crates/bit_tests/src/snapshots/watt_tests__lex__escape_sequence_9.snap
---
source: crates/bit_tests/src/lex.rs
expression: "\n\"\\x{FF}\"\n        "
---
Source code:

"\x{FF}"
        

Tokens:
[
    Token {
        tk_type: Text,
        value: "ÿ",
        address: Address(2..9),
    },
]
